--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>JavaScript Example</title>
- <!-- <script src="dist/main.js"></script> -->
+  <title>d3Hex</title>
+  <!-- <script src="dist/main.js"></script> -->
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Mono');
+  </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="d3hex.css">
+
 </head>
+
 <body>
-  <h1>Hello from HTML!</h1>
+
+  <div class="container">
+    <div class="row">
+      <div id="container1" class="col-12 col-md-6">
+      </div>
+
+      <div id="container2" class="col-12 col-md-6">
+      </div>
+    </div>
+    <div class="row">
+      <div id="zoombox" class="col-4">
+
+      </div>
+    </div>
+
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.0/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="dist/main.js"></script>
 </body>
+
 </html>
